Add control for multi select drop down/add multi song selection to playlist

--- a/SpotiSharp/SpotiSharp.csproj
+++ b/SpotiSharp/SpotiSharp.csproj
@@ -57,6 +57,9 @@
 	</ItemGroup>
 
 	<ItemGroup>
+	  <MauiXaml Update="Controls\MultiSelectPicker.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
 	  <MauiXaml Update="ViewModels\PlaylistSectionSectionCreatorViewModel.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
