Add podcast section creator

--- a/SpotiSharp/SpotiSharp.csproj
+++ b/SpotiSharp/SpotiSharp.csproj
@@ -81,6 +81,12 @@
 	  <MauiXaml Update="Views\PlaylistSectionSectionCreator.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
+	  <MauiXaml Update="Views\PodcastSectionCreator.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
+	  <MauiXaml Update="Views\PodcastSectionSectionCreator.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
 	  <MauiXaml Update="Views\SongsListView.xaml">
 	    <SubType>Designer</SubType>
 	  </MauiXaml>
